--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
