--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 ios/.xcode.env.local
+*.
 
 # Android/IntelliJ
 #
@@ -61,3 +62,5 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+ios/GoogleService-Info.plist
+android/app/google-services.json
