--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.2",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
