implemented basic requests for user creation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-firebase/auth": "^17.3.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -24,7 +25,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.8.0",
-    "yup": "^1.0.1"
+    "yup": "^1.0.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
