--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "compilerOptions": {
+    "esModuleInterop": true
+  },
+  "extends": "@react-native/typescript-config/tsconfig.json"
 }
