--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
