--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.1",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.20.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.8.0",
+    "swr": "^2.2.5",
     "yup": "^1.0.1",
     "zustand": "^4.3.7"
   },
